--- a/about/about.html
+++ b/about/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Organisms | Delta Design System</title>
+    <title>About the Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
           <li><a href="../about/about.html">About</a></li>
           <li><a href="../atoms/atoms.html">Atoms</a></li>
           <li><a href="../molecules/molecules.html">Molecules</a></li>
-          <li>Organisms</li>
+          <li><a href="../organisms/organisms.html">Organisms</a></li>
           <li><a href="../style/style.html">Style</a></li>
           <li><a href="../downloads/downloads.html">Downloads</a></li>
         </ul>
@@ -35,49 +35,9 @@
     </header>
     <main>
       <article>
-        <h1 class="title">Organisms</h1>
-        <p>Organisms are relatively complex UI components composed of groups of molecules and/or atoms and/or other organisms. These organisms form distinct sections of an interface.</p>
-        <p><cite><a href="http://atomicdesign.bradfrost.com/chapter-2/#organisms">Organisms</a> from <a href="http://atomicdesign.bradfrost.com/" target="_blank">Atomic Design</a> by <a href="https://bradfrost.com" target="_blank">Brad Frost</a></cite></p>
+        <h1 class="title">About the Delta Design System</h1>
         <section class="row wide">
-          <h2>Delta Design System Organisms</h2>
-          <div class="card-group">
-            <div class="card">
-              <div class="text">
-                <h3>Banners</h3>
-                <p class="icon"><a href="banners/banners.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Card Groups</h3>
-                <p class="icon"><a href="card-groups/card-groups.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Footers</h3>
-                <p class="icon"><a href="footers/footers.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Forms</h3>
-                <p class="icon"><a href="forms/forms.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Headers</h3>
-                <p class="icon"><a href="headers/headers.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Media Grid Blocks</h3>
-                <p class="icon"><a href="media-grid-blocks/media-grid-blocks.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-          </div>
+          <h2></h2>
         </section>
       </article>
     </main>
@@ -88,7 +48,7 @@
             <li><a href="../about/about.html">About</a></li>
             <li><a href="../atoms/atoms.html">Atoms</a></li>
             <li><a href="../molecules/molecules.html">Molecules</a></li>
-            <li>Organisms</li>
+            <li><a href="../organisms/organisms.html">Organisms</a></li>
             <li><a href="../style/style.html">Style</a></li>
             <li><a href="../downloads/downloads.html">Downloads</a></li>
           </ul>
