--- a/atoms/atoms.html
+++ b/atoms/atoms.html
@@ -24,7 +24,7 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
-          <li><a href="../index.html">Overview</a></li>
+          <li><a href="../about/about.html">About</a></li>
           <li>Atoms</li>
           <li><a href="../molecules/molecules.html">Molecules</a></li>
           <li><a href="../organisms/organisms.html">Organisms</a></li>
@@ -36,8 +36,9 @@
     <main>
       <article>
         <h1 class="title">Atoms</h1>
-        <p>If atoms are the basic building blocks of matter, then the atoms of our interfaces serve as the foundational building blocks that comprise all our user interfaces. These atoms include <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">basic HTML elements</a> like form labels, inputs, buttons, and others that can’t be broken down any further without ceasing to be functional.</p>
+        <p>If atoms are the basic building blocks of matter, then the atoms of our interfaces serve as the building blocks of our design system.</p>
         <p><cite><a href="http://atomicdesign.bradfrost.com/chapter-2/#atoms">Atoms</a> from <a href="http://atomicdesign.bradfrost.com/" target="_blank">Atomic Design</a> by <a href="https://bradfrost.com" target="_blank">Brad Frost</a></cite></p>
+        <p>Note that there aren't many atoms. I haven't broken everything down into atoms yet, and I'm not sure if I will. Some things make more sense when paired into molecules and organisms. There are also some things that I've bundled into <a href="../style/style.html">Styles</a>, so perhaps you'll find more there.</p>
         <section class="row wide">
           <h2>Delta Design System Atoms</h2>
           <div class="card-group">
@@ -67,7 +68,7 @@
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul id="footer-navigation">
-            <li><a href="../index.html">Overview</a></li>
+            <li><a href="../about/about.html">About</a></li>
             <li>Atoms</li>
             <li><a href="../molecules/molecules.html">Molecules</a></li>
             <li><a href="../organisms/organisms.html">Organisms</a></li>
