--- a/molecules/molecules.html
+++ b/molecules/molecules.html
@@ -24,7 +24,7 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
-          <li><a href="../index.html">Overview</a></li>
+          <li><a href="../about/about.html">About</a></li>
           <li><a href="../atoms/atoms.html">Atoms</a></li>
           <li>Molecules</li>
           <li><a href="../organisms/organisms.html">Organisms</a></li>
@@ -97,7 +97,7 @@
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul id="footer-navigation">
-            <li><a href="../index.html">Overview</a></li>
+            <li><a href="../about/about.html">About</a></li>
             <li><a href="../atoms/atoms.html">Atoms</a></li>
             <li>Molecules</li>
             <li><a href="../organisms/organisms.html">Organisms</a></li>
