About page; image optimization; en dashes
Added About page; optimized jpg assets; replaced em dashes with en dashes; some addtional copy edits.

--- a/molecules/media-grid-items/media-grid-items.html
+++ b/molecules/media-grid-items/media-grid-items.html
@@ -36,7 +36,7 @@
     <main>
       <article>
         <h1 class="title">Media Grid Items</h1>
-        <p>Media grid items contain a media element &mdash; typically an image &mdash; on the left with a headline and text on the right (or, in the Delta Design System, vice-versa). When grouped together in a media grid block, this pattern is perfect view into content such as blog posts, user information, and other types.</p>
+        <p>Media grid items contain a media element &ndash; typically an image &ndash; on the left with a headline and text on the right (or, in the Delta Design System, vice-versa). When grouped together in a media grid block, this pattern is perfect view into content such as blog posts, user information, and other types.</p>
         <p>Here are some of the options and features of media grid items:</p>
         <ul>
           <li>On smaller screens, menu grid items stack vertically, and those menu grid items stack one on top of the next in the block.</li>
