--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -36,7 +36,7 @@
     <main>
       <article>
         <h1 class="title">Banners</h1>
-        <p>Banners are a key visual organism in the Delta Design System. We designed banners for maximum flexibility. Here are the options you can control:</p>
+        <p>Banners are a key visual organism in the Delta Design System. I designed banners for maximum flexibility. Here are the options you can control:</p>
         <ul>
           <li>Photo background (if a photo background is wanted; this is an inline setting)</li>
           <li>Overlay color and opacity (this is an inline setting)</li>
@@ -62,7 +62,7 @@
             </figure>
             <ol>
               <li>The parent relationship starts with <code style="white-space: normal">&lt;div class=&quot;banner&quot;&gt;</code>.
-              <li>We use the <code>.tall</code> class to set the banner to <code>height: 90vh</code> &mdash; the <code>.short</code> class sets the banner to <code>height: 45vh</code>. If you don't include one of these classes, the banner will be only as tall as the content requires.</li>
+              <li>We use the <code>.tall</code> class to set the banner to <code>height: 90vh</code> &ndash; the <code>.short</code> class sets the banner to <code>height: 45vh</code>. If you don't include one of these classes, the banner will be only as tall as the content requires.</li>
               <li>Use either a <code>.left</code> or <code>.right</code> class to control whether the banner's content aligns left or right horizontally (on screens wider than 48rem).</li>
               <li>The <code>.bg-photo</code> class sets up the banner for a background-photo.</li>
               <li>The <code>.light</code> or <code>.dark</code> class is used to tell the css the overall tone of the background photo. If the class is set to <code>.light</code> (for a light photo), the content is set to <code>color: $black</code>. If the class is set to <code>.dark</code> (for a dark photo), the content is set to <code>color: $white</code>.</li>
