--- a/organisms/media-grid-blocks/media-grid-blocks.html
+++ b/organisms/media-grid-blocks/media-grid-blocks.html
@@ -36,7 +36,7 @@
     <main>
       <article>
         <h1 class="title">Media Grid Blocks</h1>
-        <p>Media grid blocks are great to use for previews of longer content. We like to think of them as a robust table of contents.</p>
+        <p>Media grid blocks are great to use for previews of longer content. I like to think of them as a robust table of contents.</p>
         <section class="row wide">
           <h2 class="visuallyhidden">Media Grid Block Example</h2>
           <div class="media-grid-block">
