--- a/style/transitions/transitions.html
+++ b/style/transitions/transitions.html
@@ -51,7 +51,7 @@
   transition: $property $duration $timing $delay;
 };</code></pre>
             </figure>
-            <p>All of that translates&mdash;basically&mdash;to:</p>
+            <p>All of that translates&ndash;basically&ndash;to:</p>
             <figure>
               <figcaption>css</figcaption>
 <pre><code>transition: all 0.25s ease 0s;</code></pre>
