--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -112,7 +112,7 @@
           <div class="column">
             <p>The Delta Design System typography system engineered for semantics, legibility, consistency, flexibility, and simplicity. Too often typography becomes a complex web of customizations, and we want to avoid that situation. Here are some of the basics of the typography system:</p>
             <ul>
-              <li><code>&lt;h1&gt;&mdash;&lt;h4&gt;</code> section headings</li>
+              <li><code>&lt;h1&gt;&ndash;&lt;h4&gt;</code> section headings</li>
               <li><code>&lt;p&gt;</code> for body copy</li>
               <li><code>&lt;ol&gt;</code> and <code>&lt;ul&gt;</code> for ordered and unordered lists</li>
               <li><code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code> for importance and emphasis. Please consult the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong#Usage_notes" target="_blank">Usage notes</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong$history" target="_blank">Mozilla Contributors</a> for more detail on how to use <code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code>.</li>
