--- a/about/about.html
+++ b/about/about.html
@@ -10,8 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../css/master.css" rel="stylesheet">
+    <style>
+      @media (min-width: 48rem) {h1.title {max-width: 75%;}}
+    </style>
   </head>
-  <body>
+  <body data-aos="fade-in">
     <header>
       <div class="logo">
         <a href="../index.html">
@@ -36,8 +39,52 @@
     <main>
       <article>
         <h1 class="title">About the Delta Design System</h1>
+        <p>I create handcrafted, responsive websites and applications for a living and for fun, and I frequently find myself reusing my own code. So I decided to turn my work into an open source framework that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
+        <p>There are lots of available frameworks to choose from, and I've used more than a few:</p>
+        <ul>
+          <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+          <li><a href="https://foundation.zurb.com" target="_blank">Foundation</a></li>
+          <li><a href="https://materializecss.com" target="_blank">Materializecss</a></li>
+        </ul>
+        <p>I love these, but I always found myself working harder to customize and simplify the code I would wind up with, and I was never entirely satisfied with the results. That was the inspiration for the Delta Design System: something that was relatively simple yet effective. But how did I get here?</p>
         <section class="row wide">
-          <h2></h2>
+          <h2>Inspiration</h2>
+          <div class="column">
+            <p>I've been designing for the web for&hellip; well, let's just say I've been designing for the web for awhile now. At some point in my early history, someone said that &ndash; if you really want to know what you're doing &ndash; you need to design in html and css. I took that to heart and have been looking at source code like it's the Matrix ever since. Some things, however, had a major impact on me along the way.</p>
+            <h3><a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a></h3>
+            <p>It's no exaggeration to say that <a href="https://ethanmarcotte.com" target="_blank">Ethan Marcotte's</a> <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a> article changed my life. Everything came into focus when I read that article. I love everything about the concept of responsive design. I am always stunned when I come across a project that does not take this approach from the get-go.</p>
+            <h3><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">Flexbox</a></h3>
+            <p>Working almost hand-in-hand with responsive design, <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">flexbox</a> was a concept I was able to get behind immediately. I was always a little annoyed using things like <code>float</code> and <code>position: absolute</code> to get the layouts I wanted, and I was almost always faced issues with the layouts anyway.</p>
+            <p>I may not now (or ever) have a complete grasp on flexbox, but the concept and the syntax was easy enough to change the way I thought about code.</p>
+            <h3><a href="https://sass-lang.com" target="_blank">Sass</a></h3>
+            <p>I like to work quickly, and I don't like making constant micro-adjustments to my css in order to make things work for a singular instance or purpose. It took me a long time to ramp up to <a href="https://sass-lang.com" target="_blank">Sass</a>, but once I was able to start using the basics, it had a profound effect on the way I went about my work.</p>
+            <p>I've always been a little picky about my css, but with Sass I was able to make things more flexible and robust while still keeping things super tidy. Sass makes it much easier to make wholesale adjustments to my css without having to spend an eternity searching through every line of code.</p> 
+          </div>
+        </section>
+        <section class="row wide">
+          <h2>Principles</h2>
+          <div class="column">
+            <p>I've got principles, and they're a big reason why I use my code over and over again. I believe that products should be engineered to create better experiences for the user (and achieve applicable business goals and objectives). I want my work to be thoughtful and deliberate. A design system should helps us work together to provide consistent experiences across all of products and services and devices. The following principles have been part of my lexicon for years, so naturally they would also be a big part of the Delta Design System.</p>
+            <h3>Efficiency</h3>
+            <p><em>Make the best thing the easiest thing</em></p>
+            <p>Think simplicity: you are going to have to own this thing you build, and you are going to be tasked to support it's continued evolution. We must make it easy to be nimble. We should never do something just because we can or because we think it is cool. We should only do something because it is the right thing to do for the given purpose.</p>
+            <p>Standards and decisions are codified and used to provide designers and developers easy-to-use tools to expertly and efficiently deliver the highest quality experiences to users. The goal is to simplify and standardize: tools, frameworks, libraries, style, version control, and more.</p>
+            <h3>Accessibility</h3>
+            <p><em>Accessibility is not negotiable</em></p>
+            <p>Standards should be built with a priority on <a href="https://www.section508.gov/" target="_blank">508 compliance</a> and <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">WCAG guidelines</a> at every step of the design process. From colors to code, everything required to meet high standards of accessibility should be built into any design system or framework &ndash; no shortcuts whatsoever when it comes to accessibility. We all need to become experts on this topic.</p>
+            <p>I have done my best with regards to accessibility, but I know that there is more to do, and I welcome any and all qualified input on this subject.</p>
+            <h3>Flexibility</h3>
+            <p><em>Reduce, reuse, recycle</em></p>
+            <p>Review, test, evaluate, and repurpose patterns, code, and designs from other foundations, repositories and style guides to make use of tried-and-true best practices. Do not create new components or recreate existing components unless the new pattern will be applicable to other existing properties. We want our work to be smart, methodical, efficient, and most of all functional. We want to use all of the tools we have available, but only when it makes us (or our partners) smarter, more efficient, more functional, and more effective.</p>
+          </div>
+        </section>
+        <section class="row wide">
+          <h2>Please Get Involved</h2>
+          <div class="column">
+            <p>I used to think I knew it all. Maybe I did at one time. However, a few years ago I came to the realization that I do not know it all. My favorite part of open source code is that it is a community, and I would love it if people would contribute to the project. There is still lots to do, and this project would be better with more involvement. At least I believe it would be.</p>
+            <p>I'll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I'll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
+            <p>Whatever your expertise: I want you. Cheers.</p>
+          </div>
         </section>
       </article>
     </main>
