--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <section class="row wide about">
           <h2 class="center">Meet the Delta Design System</h2>
           <div class="column" style="align-items: center;">
-            <p>I handcrafted, responsive websites and applications, and I frequently find myself reusing my own code. So I decided to turn my system into an open source framework that make it easy to design responsive websites, and apps that work on any device. We aim to be semantic, readable, flexible, and completely customizable.</p>
+            <p>I create handcrafted, responsive websites and applications, and I frequently find myself reusing my own code. So I decided to turn my work into an open source framework that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
             <p class="icon" style="width: 8rem;"><a href="about/about.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
           </div>
         </section>
