Updated copyright line

--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -104,7 +104,7 @@
         </section>
       </div>
       <div class="copyright row wide">
-        <p>&copy; 2019 Delta Design System</p>
+        <p>&copy; 2019 Delta Design System. Conceived and developed by <a href="https://chris.blackcoffeeshoppe.com" target="_blank">Chris Fournier</a>.</p>
       </div>
     </footer>
     <!-- scripts -->
