--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="text">
             <h2 class="center">The Delta Design System</h2>
-            <p class="center">An open-source design system framework that can be used to build sites, apps, and prototypes responsively and quickly.</p>
+            <p class="center">An open-source design system framework that can be used to build responsive sites, apps, and prototypes quickly.</p>
           </div>
           <div class="action row wide">
             <a href="https://github.com/cdfournier/delta-design-system/archive/master.zip"><span class="button">Download</span></a>
