--- a/about/about.html
+++ b/about/about.html
@@ -83,7 +83,7 @@
           <li><a href="https://foundation.zurb.com" target="_blank">Foundation</a></li>
           <li><a href="https://materializecss.com" target="_blank">Materializecss</a></li>
         </ul>
-        <p>I love these, but I always found myself working harder to customize and simplify the code I would wind up with, and I was never entirely satisfied with the results. That was the inspiration for the Delta Design System: something that was relatively simple yet effective. But how did I get here?</p>
+        <p>I love these, but I always found myself working harder to customize and simplify the code I would wind up with, and I was never entirely satisfied with the results. That was the idea behind the Delta Design System: something that was relatively simple yet effective. But how did I get here?</p>
         <section class="row wide">
           <h2>Inspiration</h2>
           <div class="column">
