--- a/molecules/accordions/accordions.html
+++ b/molecules/accordions/accordions.html
@@ -85,7 +85,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"/></svg>
               </label>
               <div class="details">
-                <p>An accordion menu is a vertically stacked list of headers that can be clicked to reveal or hide content associated with them.</p>
+                <p>Accordions are elements that can be clicked to reveal or hide content associated with them.</p>
               </div>
             </div>
           </div>
