--- a/molecules/blockquotes/blockquotes.html
+++ b/molecules/blockquotes/blockquotes.html
@@ -89,7 +89,7 @@
               <p>Searching the internet, there are many different ways to mark-up blockquotes. The Delta Design System mostly adheres to the approach illustrated by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote" target="_blank">MDN web docs</a>:</p>
               <ul>
                 <li>We add a <code>&lt;cite&gt;</code> to the opening <code>&lt;blockquote&gt;</code> tag.</li>
-                <li>We use <code>p</code> tags inside the <code>&lt;blockquote&gt;</code> tag.</li>
+                <li>We use <code>&lt;p&gt;</code> tags inside the <code>&lt;blockquote&gt;</code> tag.</li>
                 <li>We do not, however, use a <code>&lt;footer&gt;</code> tag in our blockquote.</li>
               </ul>
               <p><code>&lt;blockquote&gt;</code> elements are left-aligned by default, but you can add a <code>.center</code> or <code>.right</code> class to change the horizontal alignment to suit your needs.</p>
