--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -135,7 +135,7 @@
           <h2>Side by Side Banner Details</h2>
           <div class="column">
             <ul>
-              <li>The <code>img</code> comes first in the code stacking order. This way the <code>img</code> always appears on top of the <code>.text</code> on smaller screens.</li>
+              <li>The <code>&lt;img&gt;</code> comes first in the code stacking order. This way the <code>&lt;img&gt;</code> always appears on top of the <code>.text</code> on smaller screens.</li>
               <li>Use a <code>.left</code> or <code>.right</code> class to control whether the <code>.text</code> <code>&lt;div&gt;</code> is placed on the left or right (horizontally) on screens wider than 48rem.</li>
               <li>Use a class of <code>.light</code> or <code>.dark</code> to control the color of the content in the <code>.text</code> container.</li>
               <li>Add a <code>.tall</code> or <code>.short</code> class to specify the <code>min-height</code> of the banner.</li>
