--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -220,7 +220,7 @@
             <figure>
               <figcaption>p with arrow</figcaption>
               <p class="icon"><a href="#!">Read more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              <p>To use an icon, add an <code>.icon</code> class to your <code>p</code> tag and paste your preferred icon svg code inside a <code>&lt;span&gt;</code>.</p>
+              <p>To use an icon, add an <code>.icon</code> class to your <code>&lt;p&gt;</code> tag and paste your preferred icon svg code inside a <code>&lt;span&gt;</code>.</p>
             </figure>
           </div>
         </section>
