Revert "Minor updates"
This reverts commit 5d10ea5225031551d9a5fcf3e450e11ace5744ac.

--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -128,15 +128,21 @@
               <h3>Brand Colors</h3>
               <div class="color-card-row">
                 <div class="color-card">
-                  <div class="color-sample bg-primary"></div>
+                  <div class="color-sample bg-dk-blue"></div>
                   <div class="color-values">
-  <pre><code>$primary: #df3a32;</code></pre>
+  <pre><code>$dk-blue: #003442;</code></pre>
                   </div>
                 </div>
                 <div class="color-card">
-                  <div class="color-sample bg-secondary"></div>
+                  <div class="color-sample bg-lt-blue"></div>
                   <div class="color-values">
-  <pre><code>$secondary: #003442;</code></pre>
+  <pre><code>$lt-blue: #4f7272;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-crimson"></div>
+                  <div class="color-values">
+  <pre><code>$crimson: #df3a32;</code></pre>
                   </div>
                 </div>
               </div>
