--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -128,21 +128,15 @@
               <h3>Brand Colors</h3>
               <div class="color-card-row">
                 <div class="color-card">
-                  <div class="color-sample bg-dk-blue"></div>
+                  <div class="color-sample bg-primary"></div>
                   <div class="color-values">
-  <pre><code>$dk-blue: #003442;</code></pre>
+  <pre><code>$primary: #df3a32;</code></pre>
                   </div>
                 </div>
                 <div class="color-card">
-                  <div class="color-sample bg-lt-blue"></div>
+                  <div class="color-sample bg-secondary"></div>
                   <div class="color-values">
-  <pre><code>$lt-blue: #4f7272;</code></pre>
-                  </div>
-                </div>
-                <div class="color-card">
-                  <div class="color-sample bg-crimson"></div>
-                  <div class="color-values">
-  <pre><code>$crimson: #df3a32;</code></pre>
+  <pre><code>$secondary: #003442;</code></pre>
                   </div>
                 </div>
               </div>
@@ -171,7 +165,7 @@
         <section class="row wide">
           <h2>Color Application</h2>
           <div class="column">
-            <p>To apply a <code>background-color</code> using any of the defined colors in the system, simply add a <code>.bg-</code> prefix to any of the color declarations above. For example, do make a column's background crimson, add a <code>.bg-crimson</code> to the appropriate tag.</p>
+            <p>To apply a <code>background-color</code> using any of the defined colors in the system, simply add a <code>.bg-</code> prefix to any of the color declarations above. For example, to make a column's background light gray, add a <code>.bg-lt-gray</code> to the appropriate tag.</p>
           </div>
         </section>
       </article>
