Structured data updates
Updates to schema details on all pages

--- a/about/about.html
+++ b/about/about.html
@@ -41,9 +41,14 @@
     <script type="application/ld+json">
     {
       "@context" : "http://schema.org",
-      "@type" : "Product",
+      "@type" : "SoftwareSourceCode",
       "name" : "The Delta Design System",
-      "description" : "An open-source design system that can be used to build responsive sites, apps, and prototypes quickly."
+      "description" : "An open-source design system that can be used to build responsive sites, apps, and prototypes quickly.",
+      "url" : "https://cdfournier.github.io/delta-design-system/index.html",
+      "image" : "https://cdfournier.github.io/delta-design-system/assets/icons/delta-design-system-logo.png",
+      "producer" : "Chris Fournier",
+      "version" : "1.1",
+      "license" : "https://github.com/cdfournier/delta-design-system/blob/master/LICENSE"
     }
     </script>
   </head>
