--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
       "description" : "An open-source design system that can be used to build responsive sites, apps, and prototypes quickly.",
       "url" : "https://cdfournier.github.io/delta-design-system/index.html",
       "image" : "https://cdfournier.github.io/delta-design-system/assets/icons/delta-design-system-logo.png",
-      "producer" : "Chris Fournier",
+      "producer" : {
+        "@type" : "Person",
+        "name" : "Chris Fournier"
+        }
       "version" : "1.1",
       "license" : "https://github.com/cdfournier/delta-design-system/blob/master/LICENSE"
     }
