Updated navigation on About page

--- a/molecules/forms/forms.html
+++ b/molecules/forms/forms.html
@@ -82,7 +82,7 @@
     </header>
     <main>
       <article>
-        <h1 class="title">Forms and Inputs</h1>
+        <h1 class="title">Forms &amp; Inputs</h1>
         <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
         <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN web docs</a>.</p>
         <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
