Added target to Github project link

--- a/about/about.html
+++ b/about/about.html
@@ -129,7 +129,7 @@
           <h2>Please Get Involved</h2>
           <div class="column">
             <p>I used to think I knew it all. Maybe I did at one time. However, a few years ago I came to the realization that I do not know it all. My favorite part of open source code is that it is a community, and I would love it if people would contribute to the project. There is still lots to do, and this project would be better with more involvement. At least I believe it would be.</p>
-            <p>I'll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I'll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
+            <p>I'll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I'll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects" target="_blank">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
             <p>Whatever your expertise: I want you. Cheers.</p>
           </div>
         </section>
