Updated Color categories
Changed 'Brand' to 'System' and 'System' to 'Validation'

--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -135,7 +135,7 @@
           </div>
           <div class="row wide">
             <div class="column">
-              <h3>Brand Colors</h3>
+              <h3>System Colors</h3>
               <div class="color-card-row">
                 <div class="color-card">
                   <div class="color-sample bg-primary"></div>
@@ -154,7 +154,7 @@
           </div>
           <div class="row wide">
             <div class="column">
-              <h3>System Colors</h3>
+              <h3>Validation Colors</h3>
               <div class="color-card-row">
                 <div class="color-card">
                   <div class="color-sample" style="background-color: #c00c00;"></div>
