Updated layout and buttons added
Continued to refine layout css and added layout and buttons pages.

--- a/v2/about/about.html
+++ b/v2/about/about.html
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <main>
-      <section class="text">
+      <section class="row wide">
         <h1 class="title">About the Delta Design System</h1>
         <p>I create handcrafted, responsive websites and applications for a living and for fun, and I frequently find myself reusing my own code. So I decided to turn my work into an open source design system that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
         <p>There are lots of available frameworks to choose from, and I've used more than a few:</p>
@@ -45,7 +45,7 @@
         </ul>
         <p>I love these, but I always found myself working harder to customize and simplify the code I would wind up with, and I was never entirely satisfied with the results. That was the idea behind the Delta Design System: something that was relatively simple yet effective. But how did I get here?</p>
       </section>
-      <section class="text">
+      <section class="row wide">
         <h2>Inspiration</h2>
         <p>I've been designing for the web for&hellip; well, let's just say I've been designing for the web for awhile now. At some point in my early history, someone said that &ndash; if you really want to know what you're doing &ndash; you need to design in html and css. I took that to heart and have been looking at source code like it's the Matrix and designing with html and css ever since. Some things, however, had a major impact on me along the way.</p>
         <h3><a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Responsive Web Design</a></h3>
@@ -57,7 +57,7 @@
         <p>I like to work quickly, and I don't like making constant micro-adjustments to my css in order to make things work for a singular instance or purpose. It took me a long time to ramp up to <a href="https://sass-lang.com" target="_blank">Sass</a>, but once I was able to start using the basics, it had a profound effect on the way I went about my work.</p>
         <p>I've always been a little picky about my css (even though there's more madness than method right now&hellip; could use some help with that), but with Sass I was able to make things more flexible and robust while still keeping things tidy. Sass also makes it much easier to make wholesale adjustments to my css without having to spend an eternity searching through every line of code.</p>
       </section>
-      <section class="text">
+      <section class="row wide">
         <h2>Principles</h2>
         <p>I've got principles, and they're a big reason why I use my code over and over again. I believe that products should be engineered to create better experiences for the user (and achieve applicable business goals and objectives). I want my work to be thoughtful and deliberate. A design system should help us work together to provide consistent experiences that perform well across all devices. The following principles have been part of my lexicon for years, so naturally they would also be a big part of the Delta Design System.</p>
         <h3>Efficiency</h3>
@@ -72,7 +72,7 @@
         <p><em>Reduce, reuse, recycle</em></p>
         <p>Review, test, evaluate, and repurpose patterns, code, and designs from other foundations, repositories, and style guides to make use of tried-and-true best practices. Do not create new components or recreate existing components unless the new pattern will be applicable to other existing properties. We want our work to be smart, methodical, efficient, and most of all functional. We want to use all of the tools we have available, but only when it makes us (or our partners) smarter, more efficient, more functional, and more effective.</p>
       </section>
-      <section class="text">
+      <section class="row wide">
         <h2>Please Get Involved</h2>
         <p>I used to think I knew it all. Maybe I did at one time. However, a few years ago I came to the realization that I do not know it all. My favorite part of open source code is that it is a community, and I would love it if people would contribute to the project. There is still lots to do, and this project would be better with more involvement. At least I believe it would be.</p>
         <p>I'll be keeping an eye on <a href="https://github.com/cdfournier/delta-design-system/issues" target="_blank">issues</a>. I'll be tracking scheduled <a href="https://github.com/cdfournier/delta-design-system/projects">projects</a> with updates and fixes. I hope to add a code guideline and contribution guidelines in the near future too.</p>
