Many version 2 updates

--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -108,7 +108,7 @@
 <pre><code>&lt;div class=&quot;banner tall right bg-photo light center&quot; style=&quot;background-image: url(../../assets/images/london.jpg);&quot;&gt;</code></pre>
             </figure>
             <ol>
-              <li>The parent relationship starts with <code style="white-space: normal">&lt;div class=&quot;banner&quot;&gt;</code>.
+              <li>The parent relationship starts with <code style="white-space: normal">&lt;div class=&quot;banner&quot;&gt;</code>.</li>
               <li>We use the <code>.tall</code> class to set the banner to <code>height: 90vh</code> &ndash; the <code>.short</code> class sets the banner to <code>height: 45vh</code>. If you don't include one of these classes, the banner will be only as tall as the content requires.</li>
               <li>Use either a <code>.left</code> or <code>.right</code> class to control whether the banner's content aligns left or right horizontally (on screens wider than 48rem).</li>
               <li>The <code>.bg-photo</code> class sets up the banner for a background-photo.</li>
