--- a/v2/style/typography/typography.html
+++ b/v2/style/typography/typography.html
@@ -91,7 +91,7 @@
         <h2>Typography System</h2>
         <p>The Delta Design System typography system engineered for semantics, legibility, consistency, flexibility, and simplicity. Too often typography becomes a complex web of customizations, and we want to avoid that situation. Here are some of the basics of the typography system:</p>
         <ul>
-          <li><code>&lt;h1&gt;&ndash;&lt;h4&gt;</code> section headings</li>
+          <li><code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, and <code>&lt;h4&gt;</code> section headings</li>
           <li><code>&lt;p&gt;</code> for body copy</li>
           <li><code>&lt;ol&gt;</code> and <code>&lt;ul&gt;</code> for ordered and unordered lists</li>
           <li><code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code> for importance and emphasis. Please consult the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong#Usage_notes" target="_blank">Usage notes</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong$history" target="_blank">Mozilla Contributors</a> for more detail on how to use <code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code>.</li>
